# YugabyteDB_Distributed_Connector

./: CMakeLists.txt  OBSERVABILITY.md  README.md  RUNBOOK.md  main.cpp
docs/: Architecture.md  FinalReport.md  ProjectSummary.md
include/: YBConnectionManager.h  YBErrorHandler.h  YBQueryExecutor.h  YBResultSet.h
src/: YBConnectionManager.cpp  YBErrorHandler.cpp  YBQueryExecutor.cpp  YBResultSet.cpp
tests/: connection_test.cpp  integration_test.cpp  query_test.cpp  storage_test.cpp
